--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"prepare": "husky install",
-		"commit": "git-cz"
+		"commit": "git-cz",
+		"lint:eslint": "eslint --fix --ext .js,.ts,.tsx ./src",
+		"lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,ts,json,tsx,css,less,scss,html,md}\"",
+		"lint:stylelint": "stylelint --cache --fix \"**/*.{less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
+		"lint:lint-staged": "lint-staged"
 	},
 	"eslintConfig": {
 		"extends": [
