--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 		"lint:eslint": "eslint --fix --ext .js,.ts,.tsx ./src",
 		"lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,ts,json,tsx,css,less,scss,html,md}\"",
 		"lint:stylelint": "stylelint --cache --fix \"**/*.{less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
-		"lint:lint-staged": "lint-staged"
+		"lint:lint-staged": "lint-staged",
+		"lint": "lint-staged"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -72,5 +73,12 @@
 		"commitizen": {
 			"path": "./node_modules/cz-conventional-changelog"
 		}
+	},
+	"lint-staged": {
+		"src/**/*.tsx": [
+			"eslint --ext .tsx,.ts --fix ./src",
+			"prettier --write",
+			"git add"
+		]
 	}
 }
