fix: change lint config

--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
 		"lint:eslint": "eslint --fix --ext .js,.ts,.tsx ./src",
 		"lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,ts,json,tsx,css,less,scss,html,md}\"",
 		"lint:stylelint": "stylelint --cache --fix \"**/*.{less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
-		"lint:lint-staged": "lint-staged",
-		"lint": "lint-staged"
+		"lint:lint-staged": "lint-staged"
 	},
 	"eslintConfig": {
 		"extends": [
