--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
 		"@types/react": "^18.0.18",
 		"@types/react-dom": "^18.0.6",
 		"ajv": "^6.12.6",
+		"antd": "^4.23.0",
 		"commitizen": "^4.2.5",
 		"cz-customizable": "^7.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "5.0.1",
+		"stylelint-config-prettier": "^9.0.3",
+		"stylelint-config-recess-order": "^3.0.0",
+		"stylelint-config-standard": "^28.0.0",
+		"stylelint-less": "^1.0.6",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -70,6 +75,7 @@
 		"husky": "^8.0.1",
 		"lint-staged": "^13.0.3",
 		"prettier": "^2.7.1",
+		"react-router-dom": "^6.3.0",
 		"typescript": "*"
 	},
 	"config": {
