--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "5.0.1",
+		"stylelint": "^14.11.0",
 		"stylelint-config-prettier": "^9.0.3",
 		"stylelint-config-recess-order": "^3.0.0",
 		"stylelint-config-standard": "^28.0.0",
